<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_photos">

	<fragment
		android:id="@+id/navigation_photos"
		android:name="com.karthek.android.s.gallery.ui.photos.PhotosFragment"
		android:label="@string/title_photos"
		tools:layout="@layout/fragment_photos">
		<argument
			android:name="dirIndex"
			app:argType="integer"
			android:defaultValue="-1" />
	</fragment>

	<fragment
		android:id="@+id/navigation_explore"
		android:name="com.karthek.android.s.gallery.ui.explore.ExploreFragment"
		android:label="@string/explore"
		tools:layout="@layout/fragment_explore" />

	<fragment
		android:id="@+id/navigation_media_folders"
		android:name="com.karthek.android.s.gallery.ui.folders.MediaFolderFragment"
		android:label="@string/albums"
		tools:layout="@layout/fragment_media_folder_list">
		<action
			android:id="@+id/action_navigation_media_folders_to_navigation_photos"
			app:destination="@id/navigation_photos"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:popExitAnim="@anim/nav_default_exit_anim" />
	</fragment>
	<fragment
		android:id="@+id/mediaPagerFragment"
		android:name="com.karthek.android.s.gallery.ui.pager.MediaPagerFragment"
		android:label="fragment_media_pager"
		tools:layout="@layout/fragment_media_pager">
		<argument
			android:name="dirIndex"
			app:argType="integer"
			android:defaultValue="-1" />
		<action
			android:id="@+id/action_mediaPagerFragment_pop2"
			app:popUpTo="@id/mediaPagerFragment"
			app:popUpToInclusive="true" />
		<argument
			android:name="position"
			app:argType="integer"
			android:defaultValue="0" />
	</fragment>
	<action
		android:id="@+id/action_global_mediaPagerFragment"
		app:destination="@id/mediaPagerFragment"
		app:enterAnim="@anim/nav_default_enter_anim"
		app:popExitAnim="@anim/nav_default_exit_anim" />
</navigation>