<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="8dp"
		android:keepScreenOn="true"
		tools:context=".ui.players.AudioPlayerActivity">

		<TextView
			android:id="@+id/audio_track_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:ellipsize="middle"
			android:singleLine="true"
			android:text="@string/audio"
			app:layout_constraintBottom_toTopOf="@id/barrier6"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/audio_track_art"
			app:layout_constraintTop_toTopOf="@+id/audio_track_art"
			tools:text="Some music" />

		<ImageView
			android:id="@+id/audio_track_art"
			android:layout_width="85dp"
			android:layout_height="86dp"
			android:background="@drawable/smooth_edge_rect"
			android:contentDescription="@string/album_art"
			android:scaleType="center"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_audio" />

		<SeekBar
			android:id="@+id/seekBar"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:progressTint="@color/colorMain"
			android:thumbTint="@color/colorMain"
			app:layout_constraintBottom_toBottomOf="@+id/audio_play_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/audio_play_button"
			app:layout_constraintTop_toTopOf="@+id/audio_play_button" />

		<ImageButton
			android:id="@+id/audio_play_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@null"
			android:contentDescription="@string/toggle_playback"
			android:onClick="toggle"
			app:layout_constraintBottom_toBottomOf="@+id/audio_track_art"
			app:layout_constraintStart_toEndOf="@+id/audio_track_art"
			app:srcCompat="@drawable/ic_pause_button" />

		<androidx.constraintlayout.widget.Barrier
			android:id="@+id/barrier6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:barrierDirection="top"
			app:constraint_referenced_ids="audio_play_button,seekBar"
			tools:layout_editor_absoluteY="7dp" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>